--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -18,12 +18,16 @@
     <main>
 
         <section class="sobre">
-            <h2>Livros Eletrônicos</h2>
-<!-- Alterar este texto -->
-            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas asperiores.</p>
-            <span class="apenas-desktop">
-                <p class="revisar">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum cumque hic repellendus unde culpa optio numquam molestias, temporibus adipisci fugiat reprehenderit! Ipsam, nulla molestias mollitia accusantium asperiores quod aliquam quo.</p>
-            </span>
+            <div class="fixar">
+                <h2>Livros Eletrônicos</h2>
+                <!-- Alterar este texto -->
+                <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas asperiores.</p>
+                <span class="apenas-desktop">
+                    <p class="revisar">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum cumque hic repellendus unde culpa optio numquam molestias, temporibus adipisci fugiat reprehenderit! Ipsam, nulla molestias mollitia accusantium asperiores quod aliquam quo.</p>
+                </span>
+            </div>
+            
+
         </section>
 
         <section class="content">
