--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -17,16 +17,32 @@
 
         <main>
             <section class="sobre">
-                <h1>Projetos de Ensino</h1>
-                <p class="revisar">
-                    Um texto descrevendo o que são os projetos. (Esta parte aparece em desktops e celulares,)
-                </p>
-                <span class="apenas-desktop">
-                    <p>
-                        (Esta parte aparece apenas em desktops.) <br>
-                        Sugestão: colocar os links dos projetos da página.
+                <div class="fixar">
+                    <h1>Projetos de Ensino</h1>
+                    <p class="revisar">
+                        Um texto descrevendo o que são os projetos. (Esta parte aparece em desktops e celulares,)
                     </p>
-                </span>
+                    <span class="apenas-desktop">
+                        <p>
+                            (Esta parte aparece apenas em desktops.) <br>
+                            Sugestão: colocar os links dos projetos da página.
+                        </p>
+                    </span>
+                </div>
+                <div class="fixar">
+                    <div class="apenas-desktop">
+                        <hr>
+                        <h2>Titulo teste</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id sed temporibus numquam mollitia ad soluta blanditiis consequatur rem saepe. Incidunt odio molestias soluta ducimus neque temporibus iusto pariatur nisi!</p>
+                    </div>
+                </div>
+                <div class="fixar">
+                    <div class="apenas-desktop">
+                        <hr>
+                        <h2>Titulo teste 2</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates id sed temporibus numquam mollitia ad soluta blanditiis consequatur rem saepe. Incidunt odio molestias soluta ducimus neque temporibus iusto pariatur nisi!</p>
+                    </div>
+                </div>
             </section>
 
             <section class="content">
