--- a/pages/quem-somos.html
+++ b/pages/quem-somos.html
@@ -18,11 +18,17 @@
         
     <main>
         <section class="sobre">
-            <h2>O que é REDMat</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
-            <div class="apenas-desktop">
-            <!-- Colocar aqui uma informação que só aparece em telas grandes -->
+            <div class="fixar">            
+                <h2>O que é REDMat</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
             </div>
+
+            <!-- <div class="fixar"> -->
+                <!-- <div class="apenas-desktop"> -->
+                    <!-- <p></p> -->
+                <!-- </div> -->
+            <!-- </div> -->
+
         </section>
         <section class="content">
             <h2>História do projeto</h2>
