--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -19,18 +19,21 @@
     <main>
 
         <section class="sobre">
-            <h1>Recursos <span style="overflow-wrap: break-word; hyphens: auto;">Computacionais</span></h1>
-            <p class="revisar">
-                    Os Recursos Computacionais REDMat são Applets e plataformas que utilizam tecnologia digital para oferecer suporte ao processo educacional. Esses recursos têm o objetivo de enriquecer a experiência de aprendizado, proporcionar maior acessibilidade, interatividade e flexibilidade aos estudantes. 
-            </p>
-            <span class="apenas-desktop">
+            <div class="fixar">
+                <h1>Recursos Computacionais</h1>
                 <p class="revisar">
-                    A integração efetiva de recursos computacionais na educação moderna desempenha um grande papel no aprimoramento da experiência de aprendizado. Ferramentas online, softwares educativos e plataformas interativas oferecem um ambiente dinâmico e adaptável, proporcionando acesso fácil a informações diversificadas.
+                        Os Recursos Computacionais REDMat são Applets e plataformas que utilizam tecnologia digital para oferecer suporte ao processo educacional. Esses recursos têm o objetivo de enriquecer a experiência de aprendizado, proporcionar maior acessibilidade, interatividade e flexibilidade aos estudantes. 
                 </p>
-                <p class="revisar">
-                    A acessibilidade a recursos online também promove a aprendizagem colaborativa e proporciona flexibilidade no estudo, preparando os estudantes para enfrentar desafios matemáticos avançados com confiança e competência. Essa abordagem inovadora não apenas enriquece o processo de aprendizado, mas também prepara os alunos para uma aplicação prática e significativa dos conceitos matemáticos em diversas áreas.
-                </p>
-            </span>
+                <span class="apenas-desktop">
+                    <p class="revisar">
+                        Ferramentas online, softwares educativos e plataformas interativas oferecem um ambiente dinâmico e adaptável, proporcionando acesso fácil a informações diversificadas.
+                    </p>
+                    <p class="revisar">
+                        A acessibilidade a recursos online também promove a aprendizagem colaborativa e proporciona flexibilidade no estudo, preparando os estudantes para enfrentar desafios matemáticos avançados com confiança e competência. Essa abordagem inovadora prepara os alunos para uma aplicação prática e significativa dos conceitos matemáticos em diversas áreas.
+                    </p>
+                </span>
+            </div>
+
         </section>
 
 
@@ -92,7 +95,8 @@
 <!-- Fim > Seção 1 > Container 1 -->
 
             </section>
-            <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);">
+            <hr class= "linha-grossa" >
+            <!-- ="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);"> -->
 <!-- Fim Seção 1 -->
 
 
@@ -132,7 +136,8 @@
                 </article>
                
             </section>
-            <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);">
+            <!-- <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);"> -->
+            <hr class="linha-grossa">
             
             <section id="calc-func-varias-var">
 
@@ -175,7 +180,8 @@
                 </article>
 
             </section>   
-            <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);">
+            <!-- <hr style="height: 0.5rem; margin-bottom: 10rem ; background-image: linear-gradient(to right, transparent, #999, transparent);"> -->
+            <hr class="linha-grossa">
 
             <section id="edo">
 
