--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <header></header>
 
         <main>
+            <!-- 1. Área Especial (área que aparece em verde em desktops) -->
             <section class="sobre">
+
+                <!-- 1.1 Descrição do projeto na Área Especial -->
                 <div class="fixar">
                     <h2>Sobre o Projeto</h2>
                     <p>
@@ -30,7 +33,7 @@
                     </p>
                 </div>
 
-
+                <!-- 1.2 Área das Equipes na Área Especial (não aparece em celulares) -->
                 <div class="fixar">
                     <div class="apenas-desktop">
                         <hr>
@@ -90,11 +93,11 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- 1.3 Formulário de Contato na Área Especial (não aparece em celulares)-->
                 <div class="fixar">
                     <div class = "apenas-desktop">
                         <hr>
-
-
                         <div class="contato">
                             <h2>Contato</h2>
 
@@ -141,7 +144,11 @@
                 </div>
             </section>
 
+
+            <!-- 2. Conteúdo Principal da Página (Área Branca em desktops e celulares) -->
             <section class="content">
+
+                <!-- 2.1. Projetos de Ensino -->
                 <h2>
                     <a href="pages/proj-ensino.html">
                         Projetos de Ensino com participação do REDMat
@@ -151,7 +158,9 @@
                     Os monitores REDMat atuaram ou atuam nos seguintes projetos de ensino do Instituto de Matemática e 
                     Estatística.
                 </p>
-                <p class="comentario">colocar links para página final nos itens</p>
+
+<!-- Remover este comentario após resolução do problema -->
+<p class="comentario">colocar links para página final nos itens</p>
 
                 <ul>
                     <li>
@@ -194,25 +203,17 @@
                         </a>
                     </li>
                 </ul>
-
-
-
-
-
-
                 <hr>
 
+                <!-- 2.2. Livros Eletrônicos -->
                 <h2>
                     <a href="pages/livros-eletronicos.html">
                         Livros eletrônicos, Apostilas e Ambientes Virtuais de Aprendizagem
                     </a>
                 </h2>
-
                 <p>
                     Os monitores REDMat colaboraram na produção do seguinte material digital:
                 </p>
-
-
                 <ul>
                     <li>
                         <a href="https://www.geogebra.org/m/hzvsftdf">
@@ -255,18 +256,13 @@
                         <a href="https://fcgeometria.notion.site/fcgeometria/Fundamentos-de-C-lculo-e-Geometria-d169bff4f8e34c229fdd97b514ff02e4">
                             <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
                             <p>Apostila de FGCV</p>
+                            <p class="comentario">Não seria FCG?</p>
                         </a>
                     </li>
-
-
                 </ul>
                 <hr>
 
-
-
-
-
-
+                <!-- 2.3. Plataformas -->
                 <h2>
                     <a href="pages/proj-ensino.html">
                         Plataformas com participação do REDMat
@@ -298,12 +294,9 @@
                         </a>
                     </li>
                 </ul>
-
                 <hr>
 
-
-
-
+                <!-- 2.4. Recursos Computacionais -->
                 <h2>
                     <a href="pages/recursos.html"> Recursos Computacionais </a>
                 </h2>
@@ -349,15 +342,9 @@
                         </a>
                     </li>
                 </ul>
-
                 <hr>
 
-
-
-
-
-
-
+                <!-- 2.5. Projetos de Extensão -->
                 <h2>
                     <a href="pages/recursos.html"> Projetos de Extensão </a>
                 </h2>
@@ -394,7 +381,6 @@
                         </a>
                     </li>
                 </ul>
-
 
             </section>
         </main>
