Adicionado os links as atividades do Sérgio em Recursos

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -21,14 +21,14 @@
         <section class="sobre">
             <div class="fixar">
                 <h1>Recursos Computacionais</h1>
-                <p class="revisar">
+                <p >
                         Os Recursos Computacionais REDMat são Applets e plataformas que utilizam tecnologia digital para oferecer suporte ao processo educacional. Esses recursos têm o objetivo de enriquecer a experiência de aprendizado, proporcionar maior acessibilidade, interatividade e flexibilidade aos estudantes. 
                 </p>
                 <span class="apenas-desktop">
-                    <p class="revisar">
+                    <p >
                         Ferramentas online, softwares educativos e plataformas interativas oferecem um ambiente dinâmico e adaptável, proporcionando acesso fácil a informações diversificadas.
                     </p>
-                    <p class="revisar">
+                    <p >
                         A acessibilidade a recursos online também promove a aprendizagem colaborativa e proporciona flexibilidade no estudo, preparando os estudantes para enfrentar desafios matemáticos avançados com confiança e competência. Essa abordagem inovadora prepara os alunos para uma aplicação prática e significativa dos conceitos matemáticos em diversas áreas.
                     </p>
                 </span>
@@ -45,7 +45,7 @@
             <section id="func-uma-var">
 
                 <h2>Funções de Uma Variável</h2>
-                <p class="revisar">
+                <p>
                     No universo do aprendizado das funções de uma variável, os recursos computacionais emergem como aliados poderosos, oferecendo abordagens inovadoras e visualmente envolventes.
                     <span class="apenas-desktop">
                         Plataformas online especializadas proporcionam não apenas videoaulas, mas também simulações interativas que permitem aos alunos manipular gráficos, compreender transformações e explorar o comportamento de funções em diferentes cenários.
@@ -105,7 +105,7 @@
             <section id="calc-func-uma-var">
 
                 <h2>Cálculo de Funções de Uma Variável</h2>
-                <p class="revisar">
+                <p>
                     Plataformas dedicadas ao ensino de matemática fornecem ambientes dinâmicos nos quais conceitos como limites, derivadas e integrais podem ser explorados de forma prática, estimulando uma compreensão mais profunda.
                     <span class="apenas-desktop">
                         Esses recursos não apenas facilitam a visualização gráfica de conceitos matemáticos, mas também oferecem oportunidades de prática e feedback instantâneo, personalizando o processo de aprendizado e preparando os estudantes para uma sólida compreensão do cálculo de funções de uma variável.
@@ -115,7 +115,7 @@
                 
 <!-- Seção 2: Container 1 -->
                 <article class="recurso-container">
-                    <h3 class="revisar">Teorema de Rolle e Teorema do Valor Médio</h3>
+                    <h3 >Teorema de Rolle e Teorema do Valor Médio</h3>
                     <div class="recurso-content">
 
                         <div class="recurso-box">
@@ -142,11 +142,11 @@
             <section id="calc-func-varias-var">
 
                 <h2>Cálculo de Funções de Várias Variáveis</h2>
-                <p class="revisar">
+                <p>
                     A integração da tecnologia no aprendizado de funções de várias variáveis no cálculo desempenha um papel fundamental na transformação da abordagem tradicional para uma experiência mais dinâmica e eficaz. Ambientes interativos online proporcionam aos estudantes a capacidade de explorar conceitos matemáticos complexos em um contexto mais palpável.
                 </p>
                 <span class="apenas-desktop">
-                    <p class="revisar">
+                    <p>
                         A representação visual de superfícies tridimensionais, com pontos de máximo, mínimo e inflexão, bem como curvas de nível e vetores gradiente, facilita a compreensão intuitiva das relações entre variáveis e o impacto de mudanças em diferentes direções. Além disso, a tecnologia oferece a oportunidade de experimentação, simulação e resolução de problemas práticos, capacitando os alunos a aplicar o cálculo de várias variáveis em situações do mundo real.
                     </p>
                 </span>
@@ -157,7 +157,7 @@
                     <div class="recurso-content">
 
                         <div class="recurso-box">
-                            <a href="">
+                            <a href="https://www.geogebra.org/m/fgaqwqtv">
                                 <img src="../assets/img/gradiente-livro-atv.jpg" alt="Livro de atividades sobre vetor gradiente e curva de nível">
                                 <img src="../assets/icons/geogebra-icon-peq.png" alt="icone geogebra" class="logo">
                             </a>
@@ -165,7 +165,7 @@
                                 <h5>Monitor: Sergio Herman</h5>
                                 <h5>Orientador: Pablo Barrientos</h5>
                                 <h6>Ano: 2023</h6>
-                                <p class="revisar">
+                                <p >
                                     O livro de atividades apresenta abordagem visual com gráficos 3D de conceitos do vetor gradiente e algumas relações com a correspondente curvas de nível.
                                 </p>
 <!-- <p class="comentario">O texto abaixo fica na descrição do livro dentro do site geogebra. Fazer um resumo para substituí-lo</p><br> -->
@@ -186,7 +186,7 @@
             <section id="edo">
 
                 <h2>Equações Diferenciais Ordinárias</h2>
-                <p class="revisar">A utilização de recursos computacionais no aprendizado de Equações Diferenciais Ordinárias (EDOs) revoluciona a forma como os estudantes abordam sistemas dinâmicos. Softwares de simulação e algoritmos numéricos não apenas proporcionam uma compreensão visual e intuitiva das soluções, mas também capacitam os alunos a lidar eficientemente com problemas complexos, preparando-os para desafios práticos nas ciências e engenharia.</p>
+                <p>A utilização de recursos computacionais no aprendizado de Equações Diferenciais Ordinárias (EDOs) revoluciona a forma como os estudantes abordam sistemas dinâmicos. Softwares de simulação e algoritmos numéricos não apenas proporcionam uma compreensão visual e intuitiva das soluções, mas também capacitam os alunos a lidar eficientemente com problemas complexos, preparando-os para desafios práticos nas ciências e engenharia.</p>
                 <hr>
 
                 <article class="recurso-container">
@@ -194,7 +194,7 @@
                     <div class="recurso-content">
 
                         <div class="recurso-box">
-                            <a href="">
+                            <a href="https://www.geogebra.org/m/wj9n8x2f">
                                 <img src="../assets/img/edo-livro-atv.jpg" alt="Livro de atividades de modelagem matemática usando equações diferenciais ordinárias">
                                 <img src="../assets/icons/geogebra-icon-peq.png" alt="icone geogebra" class="logo">
                             </a>
@@ -202,7 +202,7 @@
                                 <h5>Monitor: Sergio Herman</h5>
                                 <h5>Orientador: Pablo Barrientos</h5>
                                 <h6>Ano: 2023</h6>
-                                <p class="revisar">
+                                <p >
                                     Applets que apresentam gráficos interativos para observação das inter-relações entre propriedades, estimulando o pensamento crítico na formulação de modelos matemáticos para a explicação científica de fenômenos específicos.
                                 </p>
 <!-- <p class="revisar"> -->
