Alterações na Home e adicionado links na pagina Recursos

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                     <li>
                         <a href="https://fcgeometria.notion.site/fcgeometria/Fundamentos-de-C-lculo-e-Geometria-d169bff4f8e34c229fdd97b514ff02e4">
                             <img src="assets/icons/livro-icone.png" alt="icone geogebra 3D" />
-                            <p>Apostila de FGCV</p>
-                            <p class="comentario">Não seria FCG?</p>
+                            <p>Apostila de FCG</p>
+                            
                         </a>
                     </li>
                 </ul>
@@ -276,21 +276,21 @@
                     <li>
                         <a href="http://www.gma.uff.br/calculo1a/">
                             <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
-                            <p>Site Cálculo&nbsp;1A (em&nbsp;andamento)</p>
+                            <p>Site Cálculo&nbsp;1A </p>
                         </a>
                     </li>
 
                     <li>
                         <a href="https://redmatuff.github.io/calculovariasvariaveis/">
                             <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
-                            <p>Site Cálculo&nbsp;2B (em&nbsp;andamento)</p>
+                            <p>Site Cálculo&nbsp;2B </p>
                         </a>
                     </li>
 
                     <li>
                         <a href="http://www.gma.uff.br/calculo3a/">
                             <img src="assets/icons/site-icone.png" alt="icone geogebra 3D" />
-                            <p>Site Cálculo&nbsp;3A (em&nbsp;andamento)</p>
+                            <p>Site Cálculo&nbsp;3A </p>
                         </a>
                     </li>
                 </ul>
